--- a/testdata/testConfig.conf
+++ b/testdata/testConfig.conf
@@ -62,6 +62,7 @@ end
 network network4
 	unregistered
 		subnet 10.0.9.0/24
+			option option-125 "This is some text"
 			range 10.0.9.10 10.0.9.100
 			range 10.0.9.120 10.0.9.250
 		end
