--- a/testdata/includeConfig.conf
+++ b/testdata/includeConfig.conf
@@ -8,7 +8,7 @@ network one
     end
 end
 
-include "./testdata/includedConfig.conf"
+include "../../testdata/includedConfig.conf"
 
 network three
     subnet 192.168.3.1/24
