Add option to disable registration check for a specific network

--- a/internal/server/testdata/testConfig.conf
+++ b/internal/server/testdata/testConfig.conf
@@ -68,3 +68,12 @@ network network4
 		end
 	end
 end
+
+network network5
+	ignore-registration
+
+	subnet 10.0.10.0/24
+		range 10.0.10.10 10.0.10.100
+		option router 10.0.10.1
+	end
+end
