--- a/docs/example.conf
+++ b/docs/example.conf
@@ -59,6 +59,8 @@ network network3
 end
 
 network network4
+	ignore-registration
+
 	unregistered
 		subnet 10.0.9.0/24
 			range 10.0.9.10 10.0.9.100
