Add host specific options
This commit only adds support for DHCP options, not lease times or
addresses.

Issue #4

--- a/internal/server/testdata/testConfig.conf
+++ b/internal/server/testdata/testConfig.conf
@@ -84,3 +84,12 @@ network network5
         option router 10.0.10.1
     end
 end
+
+host 12:34:56:ab:cd:ef
+    option domain-name-server 192.168.0.10
+end
+
+host 12:34:56:78:cd:ef
+    option domain-name-server 192.168.0.11
+    option option-125 "This is some text"
+end
